Fixed quicklinks and their tooltips
Fixed the overflowing quicklinks text in the basic theme. Also fixed the quicklink tooltips which now show both wikititle and full url to the item instead of just the wikititle.

--- a/MoinMoin/themes/basic/static/custom-less/theme.less
+++ b/MoinMoin/themes/basic/static/custom-less/theme.less
@@ -175,8 +175,13 @@ h1, h2, h3, h4, h5, h6 {
 .moin-quicklink {
   position: relative;
   padding: 5px 15px 5px 15px;
-  border: 1px solid @list-group-border;
+  background-color: #c8ddf1;
+  border: 1px solid #c8ddf1;
   margin-bottom: -1px;
+
+  > a {
+    color: #1b436d;
+  }
 
   &:last-child {
     margin-bottom: 0;
